added word suggestion feature

--- a/app/src/components/InputWord.less
+++ b/app/src/components/InputWord.less
@@ -1,6 +1,7 @@
 .input-word {
     .char-input {
         width: 40px;
+        margin-top: 20px;
     }
 }
 
@@ -9,4 +10,8 @@
     align-self: end;
     font-size: 20px;
     width: 20px;
+}
+
+.suggestions {
+    margin-top: 20px;
 }
