--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,13 @@
     <% if alert %>
       <p class="alert alert-danger"><%= alert %></p>
     <% end %>
+    <% if request.path == '/' %>
+      <%= yield %>
+    <% else %>
     <div class="background"></div>
     <div class="page-content">
       <%= yield %>
     </div>
+  <% end %>
   </body>
 </html>
