--- a/app/views/crosswords/new.html.erb
+++ b/app/views/crosswords/new.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("pages/CreateCrossword", { user: current_user_obj,  }) %>
+<%= react_component("pages/CreateCrossword", { user: current_user_obj, grids: Grid.all  }) %>
